--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.freepik.com/256/1179/1179069.png?ga=GA1.1.326289360.1736511969&semt=ais_hybrid" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Movie-App</title>
   </head>
   <body>
     <div id="root"></div>
